a1/brendan_gordon/TEST_PROGRAMS/invalidtype/yu_hua/e.min
var x: int;
var y: float;
var z: int;

z = x / y;
